_k8s/letsencrypt/backup/cert-manager-ingress-epark-spring-boot.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-epark-spring-boot
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-park  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-epark
    acme.cert-manager.io/http01-edit-in-place: "true"

    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m

    # 配置是否同时支持http和https访问应用
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: lanneng-park
  tls:
    - hosts:
        - epark-video-api.pengbocloud.com
      secretName: epark-video-api.pengbocloud.com-tls
    - hosts:
        - eparkvideo.pengbocloud.com
      secretName: eparkvideo.pengbocloud.com-tls
    - hosts:
        - epark-pay-api.pengbocloud.com
      secretName: epark-pay-api.pengbocloud.com-tls

  rules:
    #自定义域名
    - host: eparkvideo.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: video-service-server-service
                #服务端口
                port:
                  number: 1234
            pathType: Prefix
    - host: epark-video-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: video-service-server-service
                #服务端口
                port:
                  number: 1234
            pathType: Prefix
    - host: epark-pay-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: epark-pay-service-server-service
                #服务端口
                port:
                  number: 8001
            pathType: Prefix
