_k8s/letsencrypt/backup/cert-manager-ingress-epark.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-epark
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-park  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-epark
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    # 开启CORS跨域请求
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # 同时配置http和https都可以访问应用
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: lanneng-park
  tls:
    - hosts:
        - epark.pengbocloud.com
      secretName: epark.pengbocloud.com-tls
    - hosts:
        - epark-h5.pengbocloud.com
      secretName: epark-h5.pengbocloud.com-tls
    - hosts:
        - open-epark-api.pengbocloud.com
      secretName: open-epark-api.pengbocloud.com-tls
    - hosts:
        - epark-video-api.pengbocloud.com
      secretName: epark-video-api.pengbocloud.com-tls
    - hosts:
        - epark-pay-api.pengbocloud.com
      secretName: epark-pay-api.pengbocloud.com-tls

  rules:
    #自定义域名
    - host: epark.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: epark-server-service
                #服务端口
                port:
                  number: 8090
            pathType: Prefix
    - host: epark-h5.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: rzhtc-h5-service
                #服务端口
                port:
                  number: 9000
            pathType: Prefix
    - host: open-epark-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: open-epark-server-service
                #服务端口
                port:
                  number: 8091
            pathType: Prefix
    - host: epark-video-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: video-service-server-service
                #服务端口
                port:
                  number: 1234
            pathType: Prefix
    - host: epark-pay-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: epark-pay-service-server-service
                #服务端口
                port:
                  number: 8001
            pathType: Prefix
