_k8s/letsencrypt/backup/cert-manager-ingress-etc.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-etc
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-etc
    acme.cert-manager.io/http01-edit-in-place: "true"
    #cert-manager.io/issue-temporary-certificate: "true"
    #kubernetes.io/tls-acme: "true"
    #ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #acme.cert-manager.io/http01-override-ingress-class: lanneng-k8s-ingress

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - etc-api.pengbocloud.com
      secretName: etc-api.pengbocloud.com-tls
    - hosts:
        - etc-admin.pengbocloud.com
      secretName: etc-admin.pengbocloud.com-tls

  rules:
    #自定义域名
    - host: etc-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: epark-etc-service
                #服务端口
                port:
                  number: 8087
            pathType: Prefix
    - host: etc-admin.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: epark-etc-web-service
                #服务端口
                port:
                  number: 9001
            pathType: Prefix
