_k8s/letsencrypt/backup/cert-manager-ingress-floor-lock.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-floor-lock
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-floor-lock
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - floor-lock-api.pengbocloud.com
      secretName: floor-lock-api.pengbocloud.com-tls


  rules:
    #自定义域名
    - host: floor-lock-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: floor-lock-app-service
                #服务端口
                port:
                  number: 8099
            pathType: Prefix
