_k8s/letsencrypt/backup/cert-manager-ingress-landing-page.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-landing-page
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-landing-page
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    # 数据传输大小
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - pengbocloud.com
      secretName: pengbocloud.com-tls
    - hosts:
        - www.pengbocloud.com
      secretName: www.pengbocloud.com-tls
  rules:
    #自定义域名
    - host: pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: landing-page-web-service
                #服务端口
                port:
                  number: 8000
            pathType: Prefix
    - host: www.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: landing-page-web-service
                #服务端口
                port:
                  number: 8000
            pathType: Prefix
