_k8s/letsencrypt/backup/cert-manager-ingress-lanneng-ai.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-lanneng-ai
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-park  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-lanneng-ai
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 负载均衡算法 如ip_hash
    nginx.ingress.kubernetes.io/upstream-hash-by: "$host"
    # Session保持配置
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    # 数据传输大小
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    # 开启CORS跨域请求
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "64800"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # 配置是否同时支持http和https访问应用
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: lanneng-park
  tls:
    - hosts:
        - park-ai.pengbocloud.com
      secretName: park-ai.pengbocloud.com-tls


  rules:
    #自定义域名
    - host: park-ai.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: lanneng-ai-agent-service
                #服务端口
                port:
                  number: 9107
            pathType: Prefix
