_k8s/letsencrypt/backup/cert-manager-ingress-lanneng-landing-page.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lannengtech-k8s-ingress-lanneng-landing-page
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-park  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-lanneng-landing-page
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m

spec:
  ingressClassName: lanneng-park
  tls:
    - hosts:
        - lannengtech.com
      secretName: lannengtech.com-tls
    - hosts:
        - www.lannengtech.com
      secretName: www.lannengtech.com-tls
  rules:
    #自定义域名
    - host: lannengtech.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: lanneng-landing-page-web-service
                #服务端口
                port:
                  number: 8000
            pathType: Prefix
    - host: www.lannengtech.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: lanneng-landing-page-web-service
                #服务端口
                port:
                  number: 8000
            pathType: Prefix
