_k8s/letsencrypt/backup/cert-manager-ingress-pdf-js.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-pdf-js
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-pdf-js
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - pdf-js.pengbocloud.com
      secretName: pdf-js.pengbocloud.com-tls

  rules:
    #自定义域名
    - host: pdf-js.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pdf-js-web-service
                #服务端口
                port:
                  number: 8010
            pathType: Prefix
