_k8s/letsencrypt/backup/cert-manager-ingress-pengbo-saas.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-pengbo-saas-v2
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-pengbo-saas-v2
    acme.cert-manager.io/http01-edit-in-place: "true"

    # 负载均衡算法 如ip_hash
    nginx.ingress.kubernetes.io/upstream-hash-by: "$host"

    # 后端大文件上传大小 数据传输大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m

    # 开启CORS跨域请求
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "64800"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # 配置是否同时支持http和https访问应用
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    # 采用了 “漏斗” 算法实现限流 保证服务可用性和被攻击  nginx的限流是一个队列模型。限流连接数为 队列长度+队列处理能力
    # 每个IP每秒可以访问的次数 默认乘数为5
    nginx.ingress.kubernetes.io/limit-rps: "50"
    # 为计算限速漏桶算法的 burst size和 limit-rps 的相乘放大系数  burst为队列长度
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "10"
    # 限流超出后的响应码
    nginx.ingress.kubernetes.io/configuration-snippet: |
      limit_req_status 429;

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - admin.pengbocloud.com
      secretName: admin.pengbocloud.com-tls
    - hosts:
        - admin-client.pengbocloud.com
      secretName: admin-client.pengbocloud.com-tls
    - hosts:
        - merchant.pengbocloud.com
      secretName: merchant.pengbocloud.com-tls
    - hosts:
        - app-api.pengbocloud.com
      secretName: app-api.pengbocloud.com-tls
    - hosts:
        - access-api.pengbocloud.com
      secretName: access-api.pengbocloud.com-tls
    - hosts:
        - admin-api.pengbocloud.com
      secretName: admin-api.pengbocloud.com-tls
    - hosts:
        - admin-client-api.pengbocloud.com
      secretName: admin-client-api.pengbocloud.com-tls
  rules:
    #自定义域名
    - host: app-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-app-service
                #服务端口
                port:
                  number: 8180
            pathType: Prefix

    - host: access-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-access-service
                #服务端口
                port:
                  number: 8186
            pathType: Prefix

    - host: admin-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-admin-service
                #服务端口
                port:
                  number: 8181
            pathType: Prefix

    - host: admin-client-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-admin-client-service
                #服务端口
                port:
                  number: 8183
            pathType: Prefix

    - host: admin.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-admin-web-service
                #服务端口
                port:
                  number: 9011
            pathType: Prefix

    - host: admin-client.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-admin-client-web-service
                #服务端口
                port:
                  number: 9012
            pathType: Prefix

    - host: merchant.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pengbo-park-merchant-web-service
                #服务端口
                port:
                  number: 9013
            pathType: Prefix
