_k8s/letsencrypt/backup/cert-manager-ingress-saas.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbocloud-k8s-ingress-saas
  namespace: default
  annotations:
    # 指定使用nginx做代理
    #kubernetes.io/ingress.class: lanneng-k8s-ingress  # 已弃用 使用 spec.ingressClassName代替
    # add an annotation indicating the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-prod-saas
    acme.cert-manager.io/http01-edit-in-place: "true"
    # 后端大文件上传大小
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 2048m
    # 数据传输大小
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    # 开启CORS跨域请求
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "64800"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # 配置是否同时支持http和https访问应用
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: lanneng-k8s-ingress
  tls:
    - hosts:
        - saas.pengbocloud.com
      secretName: saas.pengbocloud.com-tls
    - hosts:
        - saasadmin.pengbocloud.com
      secretName: saasadmin.pengbocloud.com-tls
    - hosts:
        - charge-app-api.pengbocloud.com
      secretName: charge-app-api.pengbocloud.com-tls
  rules:
    #自定义域名
    - host: saas.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: openpark-saas-admin-web-service
                #服务端口
                port:
                  number: 8025
            pathType: Prefix
    - host: saasadmin.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: openpark-saas-app-service
                #服务端口
                port:
                  number: 8085
            pathType: Prefix
    - host: charge-app-api.pengbocloud.com
      http:
        paths:
          - path: /
            backend:
              #服务名称
              service:
                name: pellet-charging-app-service
                #服务端口
                port:
                  number: 8080
            pathType: Prefix
